--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "terminal.integrated.mouseWheelZoom": true,
     "editor.fontFamily": "Cascadia Code",
     "terminal.integrated.localEchoStyle": "dim",
-    "terminal.integrated.fontFamily": "Courier New, Arial, Noto Naskh Arabic, Cascadia Code"
+    "terminal.integrated.fontFamily": "Courier New, Arial, Noto Naskh Arabic, Cascadia Code",
+    "liveServer.settings.mount": [["/BidStory", "./"]]
 }
